Move and rename the code related to parallel computation of structure factors based on Boost.Thread in prevision of the OpenMP version

--- a/cctbx/xray/boost_python/SConscript
+++ b/cctbx/xray/boost_python/SConscript
@@ -1,5 +1,5 @@
 import libtbx.load_env
-Import("env_cctbx_boost_python_ext")
+Import('env_etc', "env_cctbx_boost_python_ext")
 env = env_cctbx_boost_python_ext.Copy()
 
 libs = ["cctbx"]
@@ -22,12 +22,12 @@ sources = [
   "twin_targets.cpp",
 ]
 
-multithreaded_sources = [
-  "structure_factors_direct_multithread.cpp",
+raw_multithreaded_sources = [ 
+  "raw_multithreading/structure_factors_direct.cpp",
 ]
 
 if libtbx.env.build_options.enable_boost_threads:
   libs.append("boost_thread")
-  sources.extend(multithreaded_sources)
+  sources.extend(raw_multithreaded_sources)
 env.Prepend(LIBS=libs)
 env.SharedLibrary(target="#lib/cctbx_xray_ext", source=sources)
