--- a/cctbx/xray/boost_python/SConscript
+++ b/cctbx/xray/boost_python/SConscript
@@ -1,6 +1,7 @@
 import libtbx.load_env
 Import('env_etc', "env_cctbx_boost_python_ext")
 env = env_cctbx_boost_python_ext.Copy()
+env_etc.openmp_conf.enable_if_possible(env)
 
 libs = ["cctbx"]
 sources = [
@@ -22,7 +23,7 @@ sources = [
   "twin_targets.cpp",
 ]
 
-raw_multithreaded_sources = [ 
+raw_multithreaded_sources = [
   "raw_multithreading/structure_factors_direct.cpp",
 ]
 
