--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -251,7 +251,7 @@ else:
     )
     env_etc.cxxflags_base = [
       "-std", "strict_ansi",
-      "-msg_display_number", "-msg_disable 186,450,768,1115,1133,1168,1169",
+      "-msg_display_number", "-msg_disable", "186,450,768,1115,1133,1168,1169",
       "-tlocal"]
     env_etc.ccflags_base = [
       "-std1"]
