--- a/.gitattributes
+++ b/.gitattributes
@@ -112,6 +112,7 @@ iotbx/iotbx/pdb/hierarchy.py svneol=native#text/x-python
 iotbx/iotbx/pdb/records.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_atom_selection.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
+iotbx/iotbx/regression/tst_lattice_symmetry.py svneol=native#text/x-python
 iotbx/iotbx/shelx/errors.py -text
 iotbx/iotbx/shelx/fcf.py -text
 iotbx/iotbx/shelx/lexer.py -text
