libtbx/SConscript: tru64_cxx OpenMP flags disabled b/o cxx segfault

--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -602,7 +602,7 @@ int main() {
       ('^win32_cl$',  [['/openmp'], []]),
       ('^win32_icc$', [['/Qopenmp']]*2),
       ('^unix_icc$',  [['-openmp']]*2),
-      ('^tru64_cxx$',  [['-omp']]*2),
+      #('^tru64_cxx$',  [['-omp']]*2), # disabled b/o cxx segfault
       ('gcc',         [['-fopenmp']]*2),
     ],
     default=[None]*2)
