xray/sampled_model_density.h, xray/fast_gradients.h: OpenMP support for nested loops over box for one atom

--- a/cctbx/xray/boost_python/SConscript
+++ b/cctbx/xray/boost_python/SConscript
@@ -2,7 +2,7 @@ import libtbx.load_env
 Import('env_etc', "env_cctbx_boost_python_ext")
 env = env_cctbx_boost_python_ext.Copy()
 
-libs = ["cctbx"]
+libs = ["cctbx", "omptbx"]
 sources = [
   "xray_ext.cpp",
   "conversions.cpp",
