An approximation to Log(BesselK[1/4,x])

--- a/.gitattributes
+++ b/.gitattributes
@@ -236,6 +236,7 @@ scitbx/scitbx/iso_surface/__init__.py -text
 scitbx/scitbx/iso_surface/iso_surface_ext.cpp -text
 scitbx/scitbx/iso_surface/tst_iso_surface.m -text
 scitbx/scitbx/iso_surface/tst_iso_surface.py -text
+scitbx/scitbx/math/besselk.py -text
 scitbx/scitbx/math/sphere_sphere_intersection.py svneol=native#text/x-python
 scitbx/scitbx/source_generators/flex_fwd_h.py -text
 scitbx/scitbx/sparse/__init__.py -text
