Reciprocal space toolbox; algorithms to index small molecule diffraction patterns given the reciprocal space vectors

--- a/.gitattributes
+++ b/.gitattributes
@@ -206,6 +206,36 @@ omptbx/omp_or_stubs.h svneol=native#text/plain
 omptbx/stubs.cpp svneol=native#text/plain
 omptbx/stubs.h svneol=native#text/plain
 omptbx/tst.py svneol=native#text/x-python
+rstbx/SConscript -text
+rstbx/__init__.py -text
+rstbx/array_family/__init__.py -text
+rstbx/array_family/ext.cpp -text
+rstbx/array_family/flex.py -text
+rstbx/array_family/flex_labelit_arrays.cpp -text
+rstbx/command_line/__init__.py -text
+rstbx/command_line/lattice_symmetry.py -text
+rstbx/dps_core/__init__.py -text
+rstbx/dps_core/basis_choice.py -text
+rstbx/dps_core/cell_assessment.py -text
+rstbx/dps_core/constrainment.py -text
+rstbx/dps_core/direction.cpp -text
+rstbx/dps_core/direction.h -text
+rstbx/dps_core/directional_fft.cpp -text
+rstbx/dps_core/directional_fft.h -text
+rstbx/dps_core/dps_core.cpp -text
+rstbx/dps_core/dps_core.h -text
+rstbx/dps_core/error.py -text
+rstbx/dps_core/lepage.py -text
+rstbx/dps_core/sampling.py -text
+rstbx/dps_core/zuoreduction.py -text
+rstbx/ext.cpp -text
+rstbx/indexing/do_index.py -text
+rstbx/indexing/si_brief.txt -text
+rstbx/indexing/si_synthetic.txt -text
+rstbx/libtbx_config -text
+rstbx/symmetry/__init__.py -text
+rstbx/symmetry/sgtbx_adaptor.py -text
+rstbx/symmetry/subgroup.py -text
 scitbx/array_family/boost_python/tst_cost_of_m_handle_in_af_shared.py -text
 scitbx/array_family/boost_python/tst_smart_selection.py svneol=native#text/x-python
 scitbx/array_family/tst_unsigned_float_arithmetic.cpp -text
