--- a/.gitattributes
+++ b/.gitattributes
@@ -46,6 +46,8 @@ cctbx/sgtbx/boost_python/select_generators.cpp -text
 cctbx/uctbx/boost_python/tst_crystal_orientation.py -text
 cctbx/uctbx/crystal_orientation.cpp -text
 cctbx/xray/boost_python/raw_multithreading/structure_factors_direct.cpp -text
+cctbx/xray/tests/SConscript -text
+cctbx/xray/tests/sampled_model_density.cpp -text
 compcomm/newsletter08/default.css -text
 compcomm/newsletter08/f_square_refinement.py -text
 compcomm/newsletter08/news.txt -text
