--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,9 @@ cctbx/uctbx/crystal_orientation.cpp -text
 cctbx/xray/boost_python/raw_multithreading/structure_factors_direct.cpp -text
 cctbx/xray/tests/SConscript -text
 cctbx/xray/tests/sampled_model_density.cpp -text
+cctbx/xray/tests/sampled_model_density.h -text
+cctbx/xray/tests/tst_sampled_model_density.cpp -text
+cctbx/xray/tests/tst_shared_sampled_model_density.cpp -text
 compcomm/newsletter08/default.css -text
 compcomm/newsletter08/f_square_refinement.py -text
 compcomm/newsletter08/news.txt -text
