--- a/.gitattributes
+++ b/.gitattributes
@@ -211,6 +211,7 @@ omptbx/omp_or_stubs.h svneol=native#text/plain
 omptbx/stubs.cpp svneol=native#text/plain
 omptbx/stubs.h svneol=native#text/plain
 omptbx/tst.py svneol=native#text/x-python
+rstbx/README -text
 rstbx/SConscript -text
 rstbx/__init__.py -text
 rstbx/array_family/__init__.py -text
@@ -234,10 +235,15 @@ rstbx/dps_core/lepage.py -text
 rstbx/dps_core/sampling.py -text
 rstbx/dps_core/zuoreduction.py -text
 rstbx/ext.cpp -text
+rstbx/indexing/__init__.py -text
 rstbx/indexing/do_index.py -text
+rstbx/indexing/results2.dat -text
 rstbx/indexing/si_brief.txt -text
 rstbx/indexing/si_synthetic.txt -text
+rstbx/indexing/tst_auto_monoscan.py -text
+rstbx/indexing/tst_dataset1.py -text
 rstbx/libtbx_config -text
+rstbx/run_tests.py -text
 rstbx/symmetry/__init__.py -text
 rstbx/symmetry/sgtbx_adaptor.py -text
 rstbx/symmetry/subgroup.py -text
