rigidity_matrix_symbolic.py moved from rwgk/sandbx to scitbx.graph
Old sandbx svn log messages:

------------------------------------------------------------------------
r236 | rwgk | 2007-12-01 03:58:53 -0800 (Sat, 01 Dec 2007) | 1 line

assert that a matrix element has no common factors
------------------------------------------------------------------------
r235 | rwgk | 2007-12-01 00:47:22 -0800 (Sat, 01 Dec 2007) | 1 line

Python prototype; correct reduction of terms verified with Mathematica; runtime complexity appears to be exponential function of number of edges, as expected
------------------------------------------------------------------------

--- a/.gitattributes
+++ b/.gitattributes
@@ -275,6 +275,7 @@ scitbx/scitbx/command_line/generate_error_h.py -text
 scitbx/scitbx/examples/principal_axes_of_inertia.py svneol=native#text/x-python
 scitbx/scitbx/graph/__init__.py -text
 scitbx/scitbx/graph/rigidity.py -text
+scitbx/scitbx/graph/rigidity_matrix_symbolic.py svneol=native#text/x-python
 scitbx/scitbx/graph/tst_rigidity.py -text
 scitbx/scitbx/iso_surface/SConscript -text
 scitbx/scitbx/iso_surface/__init__.py -text
