--- a/.gitattributes
+++ b/.gitattributes
@@ -315,6 +315,8 @@ smtbx/refinement/import_cctbx_xray.h -text
 smtbx/refinement/minimization.cpp -text
 smtbx/refinement/minimization.h -text
 smtbx/refinement/minimization.py -text
+smtbx/refinement/parameter_map.cpp -text
+smtbx/refinement/parameter_map.h -text
 smtbx/refinement/refinement_ext.cpp -text
 smtbx/refinement/tests/__init__.py -text
 smtbx/refinement/tests/tst_minimization.py -text
