--- a/smtbx/refinement/SConscript
+++ b/smtbx/refinement/SConscript
@@ -2,5 +2,6 @@ Import("env_smtbx_boost_python_ext")
 env = env_smtbx_boost_python_ext.Copy()
 env.SharedLibrary(target="#lib/smtbx_refinement_ext", source=[
   "refinement_ext.cpp",
+  "parameter_map.cpp",
   "minimization.cpp",
 ])
